layout_parts/q6/css/style.css
@charset "UTF-8";

/* 回答はここに書いてね */
.text-6-1 {
  width: 90px;
  background-color: #e6f2ff; 
  padding: 10px 0;
  text-align: center;
  margin: 0 auto;
}

.table-container {
  display: table;
}

.q6-table {
  display: table-cell; 
  text-align: center;
  vertical-align: middle;
}

.text-6-2 {
  padding: 10px; 
  background-color: #fff;
  display: inline-block;
}

.q6-flex {
  display: flex;
  align-items: center;
  justify-content: center;
}

.flex-text {
  padding: 10px; 
  background-color: #fff;
}

.is-stable {
  position: relative;
}

.stable-text {
  position: absolute; 
  top: 0; 
  right: 0; 
  bottom: 0;
  left: 0; 
  margin: auto;
}

.is-flexible {
  position: relative;
}

.flexible-text {
  position: absolute; 
  top: 50%; 
  left: 50%;
  transform: translate(-50%, -50%);
}
/* 回答はここに書いてね */

